# Sistema-Distribuido

./: README.md  cliente.py  pyproject.toml
2025-08-28/: cliente-chat-geral.py  cliente-chat.py  cliente.py  node.py
2025-09-25/: Cliente.py  LLMTeste.py  Servidor.py  config.json  dataset_gerado_100k.csv  node-teste.py  node.py  teste-02.py  teste-leo-servidor.py  teste-leo.py
