[tool.poetry]
name = "sistema-distribuido"
version = "0.1.0"
description = ""
authors = ["gabrieljoao220 <gabrieljoao@aluno.ifce.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
